<?xml version="1.0" encoding="utf-8"?>
<!-- Fraser McFarlane S1434566 -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/bk"
        android:scaleType="fitXY">
    </ImageView>

    <Button
        android:id="@+id/incidentsButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="125dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:drawableTop="@mipmap/ic_launcher_currentincidents"
        android:background="@color/yellow"
        android:text="Current Incidents">

    </Button>

    <Button
        android:id="@+id/plannedRWButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@color/yellow"
        android:layout_marginTop="62.5dp"
        android:layout_below="@+id/incidentsButton"
        android:layout_alignStart="@+id/incidentsButton"
        android:drawableTop="@mipmap/ic_launcher_planned"
        android:text="Planned Roadworks"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Fraser McFarlane S1434566"/>



</RelativeLayout>
