<?xml version="1.0" encoding="utf-8"?>
<!-- Fraser McFarlane S1434566 -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/calendarIcon"
        android:title="Calendar"
        android:icon = "@drawable/ic_action_calendar"
        app:showAsAction="ifRoom"
        >

    </item>

    <item
        android:id="@+id/searchIcon"
        android:title="Search"
        android:icon = "@drawable/ic_action_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom"
        >

    </item>
</menu>