<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/titleID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="I AM A TITLE FOR THIS SCREEN"
        android:textSize="25dp"
        android:textAlignment="center"
        android:layout_marginTop="25dp"

        >

    </TextView>

    <com.google.android.gms.maps.MapView
        android:id="@+id/map"
        android:layout_width="225dp"
        android:layout_height="225dp"
        android:layout_below="@+id/titleID"
        android:layout_centerHorizontal="true">

    </com.google.android.gms.maps.MapView>



    <TextView
        android:id="@+id/descriptionID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="I AM DESCRIPTION"
        android:textSize="20dp"
        android:textAlignment="center"
        android:layout_marginBottom="106dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">

    </TextView>

</RelativeLayout>